syntax = "proto3";

package benchmark;
option go_package = "./;benchmark";
option optimize_for = SPEED;

message BenchmarkMessage {
  string Field1 = 1;
  int32 Field2 = 2;
  int32 Field3 = 3;
  string Field4 = 4;
  repeated string Field5 = 5;
  int32 Field6 = 6 ;
  string Field7 = 7;
  string Field8 = 8;
  bool Field9 = 9 ;
  bool Field10 = 10 ;
  bool Field11 = 11 ;
  bool Field12 = 12 ;
  int32 Field13 = 13;
  string Field14 = 14;
  int32 Field15 = 15 ;
  int64 Field16 = 16;
  bool Field17 = 17 ;
  int32 Field18 = 18 ;
  int32 Field19 = 19 ;
  bool Field20 = 20 ;
  bool Field21 = 21 ;
  int32 Field22 = 22 ;
  int32 Field23 = 23 ;
  int32 Field24 = 24;
  bool Field25 = 25;
  bool Field26 = 26 ;
  bool Field27 = 27 ;
  int32 Field28 = 28;
  int32 Field29 = 29 ;
  string Field30 = 30;
  string Field31 = 31;
  int32 Field32 = 32 ;
  int32 Field33 = 33 ;
  string Field34 = 34 ;
  int32 Field35 = 35 ;
  int32 Field36 = 36 ;
  int32 Field37 = 37;
  int32 Field38 = 38;
  int32 Field39 = 39 ;
  int32 Field40 = 40;
}